--- a/src/Components/Creators/Creators.css
+++ b/src/Components/Creators/Creators.css
@@ -67,8 +67,38 @@
   flex-wrap: wrap;
 }
 
+.creator_github:hover{
+  background-color: rgba(0, 0, 0, 0.829);
+  transform: translate(0, -10%);
+}
+.creator_linkedin:hover{
+  background-color: #0077b5;
+}
+.creator_instagram:hover{
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+}
+.creator_github, .creator_linkedin, .creator_instagram{
+  position: relative;
+  display: block;
+  width: 33px;
+  height: 33px;
+  border-radius: 50%;
+  background-color: #fff;
+  text-align: center;
+  transition: .6s;
+}
+.fab{
+  font-size: 25px;
+  margin-top: 5.2px;
+  transition: .3s;
+  color: #000;
+}
+.fab:hover{
+  color: #fff;
+}
+
 .creator_box {
-  min-width: 250px;
+  width: 250px;
   background-color: #17202e;
   box-shadow: 2px 3px 30px rgba(0, 0, 0, 0.05);
   display: flex;
@@ -136,10 +166,23 @@
 .creator_btn {
   margin-top: 5px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
 }
 .creator_btn img {
   width: 30px;
+}
+
+@media(max-width: 500px){
+    .creator_box{
+        width: 200px
+    }
+    .creator_github, .creator_linkedin, .creator_instagram{
+      width: 25px;
+      height: 25px;
+    }
+    .fab{
+      font-size: 16px;
+    }
 }
