--- a/src/Components/Creators/Creators.css
+++ b/src/Components/Creators/Creators.css
@@ -67,33 +67,44 @@
   flex-wrap: wrap;
 }
 
-.creator_github:hover{
+.creator_github:hover {
   background-color: rgba(0, 0, 0, 0.829);
-  transform: translate(0, -10%);
+  /* transform: translate(0, -10%); */
 }
-.creator_linkedin:hover{
+.creator_linkedin:hover {
   background-color: #0077b5;
 }
-.creator_instagram:hover{
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+.creator_instagram:hover {
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
 }
-.creator_github, .creator_linkedin, .creator_instagram{
+.creator_github,
+.creator_linkedin,
+.creator_instagram {
   position: relative;
   display: block;
   width: 33px;
-  height: 33px;
+  /* height: 33px; */
   border-radius: 50%;
   background-color: #fff;
   text-align: center;
-  transition: .6s;
+  transition: 0.6s;
 }
-.fab{
+.fab {
   font-size: 25px;
   margin-top: 5.2px;
-  transition: .3s;
+  transition: 0.3s;
   color: #000;
 }
-.fab:hover{
+.creator_github:hover .fab,
+.creator_linkedin:hover .fab,
+.creator_instagram:hover .fab {
   color: #fff;
 }
 
@@ -174,15 +185,17 @@
   width: 30px;
 }
 
-@media(max-width: 500px){
-    .creator_box{
-        width: 200px
-    }
-    .creator_github, .creator_linkedin, .creator_instagram{
-      width: 25px;
-      height: 25px;
-    }
-    .fab{
-      font-size: 16px;
-    }
+@media (max-width: 500px) {
+  .creator_box {
+    width: 200px;
+  }
+  .creator_github,
+  .creator_linkedin,
+  .creator_instagram {
+    width: 25px;
+    height: 25px;
+  }
+  .fab {
+    font-size: 16px;
+  }
 }
