--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -3,7 +3,7 @@
   position: relative;
   z-index: 1;
   margin-top: -16rem;
-  height: fit-content;
+  /* height: fit-content; */
   padding: 5rem 0;
   /* margin:0; */
 }
