testimonials arrow fixed

--- a/src/Components/Test/Tests.css
+++ b/src/Components/Test/Tests.css
@@ -81,6 +81,8 @@ button:hover {
     padding: 20px 0;
   }
 }
-.left-btn {
-  padding-right: 20px;
-}
+/* .left-btn img {
+  width: 50px;
+  padding: 5px;
+  margin: 5px;
+} */
