--- a/src/Components/Department/electrical-department.css
+++ b/src/Components/Department/electrical-department.css
@@ -55,12 +55,13 @@
 
 .elec-department-image {
   margin: auto;
-  height: 500px;
+  height: auto;
   position: relative;
   top: 0rem;
   width: auto;
   padding-left: 0rem;
-  /* top: -8rem; */
+  object-fit: cover;
+  /* top: -118rem; */
 }
 
 .elec-department-header-container {
@@ -171,9 +172,11 @@
   min-width: 150px;
   max-height: 150px;
   max-width: 150px;
-
+  object-fit: cover;
+  object-position: 100% 10%;
   border-radius: 50%;
   margin-bottom: 10px;
+  /* transform: scale(1.2); */
   position: relative;
   top: 0px;
   z-index: 6;
