--- a/src/Components/Loading/Loading.css
+++ b/src/Components/Loading/Loading.css
@@ -8,6 +8,7 @@
   align-items: center;
   animation: Gradient 8s ease infinite;
   overflow: hidden;
+  flex-direction: column;
 }
 #load_head {
   /* transform: translateY(-3000px); */
@@ -159,5 +160,100 @@
   }
   100% {
     background-position: 0% 50%;
+  }
+}
+.loading_text span {
+  font-family: draic;
+  font-size: 6vw;
+  opacity: 0;
+}
+.loading_text span:nth-child(1) {
+  animation: glow 0.4s ease-in 3s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(2) {
+  animation: glow 0.4s ease-in 3.1s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(3) {
+  animation: glow 0.4s ease-in 3.2s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(4) {
+  animation: glow 0.4s ease-in 3.3s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(5) {
+  animation: glow 0.4s ease-in 3.4s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(6) {
+  animation: glow 0.4s ease-in 3.5s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(7) {
+  animation: glow 0.4s ease-in 3.6s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(8) {
+  animation: glow 0.4s ease-in 3.7s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(9) {
+  animation: glow 0.4s ease-in 3.8s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(10) {
+  animation: glow 0.4s ease-in 3.9s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(11) {
+  animation: glow 0.4s ease-in 4s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(12) {
+  animation: glow 0.4s ease-in 4.1s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(13) {
+  animation: glow 0.4s ease-in 4.2s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(14) {
+  animation: glow 0.4s ease-in 4.3s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(15) {
+  animation: glow 0.4s ease-in 4.4s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+.loading_text span:nth-child(16) {
+  animation: glow 0.4s ease-in 4.5s forwards,
+    flicker 0.3s ease-in infinite forwards;
+}
+@keyframes glow {
+  0% {
+    opacity: 0;
+    left: -1em;
+  }
+  50% {
+    opacity: 0.5;
+    left: 0;
+  }
+  100% {
+    opacity: 1;
+    left: 1em;
+  }
+}
+@keyframes flicker {
+  0% {
+    text-shadow: 0px 0px 20px #c3ec1f;
+  }
+
+  50% {
+    text-shadow: 0px 0px 20px #ffffff;
+  }
+  100% {
+    text-shadow: 0px 0px 20px #00c3ff;
   }
 }
