--- a/src/Components/Creators/Creators.css
+++ b/src/Components/Creators/Creators.css
@@ -89,28 +89,35 @@
 .creator_instagram {
   position: relative;
   display: block;
-  width: 33px;
-  /* height: 33px; */
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  background-color: #fff;
+  background-color: #17202E;
   text-align: center;
   transition: 0.6s;
+  box-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 3px 6px rgb(0 0 0 / 23%);
+  color: white;
 }
 .creator_github:hover,
 .creator_linkedin:hover,
 .creator_instagram:hover {
-  transform: translateY(-7px);
+  transform: scale(1.13);
 }
 .fab {
   font-size: 25px;
-  margin-top: 4px;
+  margin-top: 9px;
   transition: 0.3s;
   color: #000;
 }
 .creator_github:hover .fab,
 .creator_linkedin:hover .fab,
 .creator_instagram:hover .fab {
-  color: #fff;
+  color: white;
+}
+.creator_github .fab,
+.creator_linkedin .fab,
+.creator_instagram .fab {
+  color: white;
 }
 
 .creator_box {
@@ -152,7 +159,6 @@
   align-items: center;
   width: 100%;
 }
-
 .creator_content img {
   width: 150px;
   height: 150px;
