--- a/src/Components/Home Projects/Project-home.css
+++ b/src/Components/Home Projects/Project-home.css
@@ -44,13 +44,12 @@
   text-align: center;
 }
 
-.home-project-heading {
+.home-project-heading{
   font-family: "Rowdies", cursive;
   font-size: 2.5rem;
 }
-.home-project-line {
+.home-project-line{
   text-align: center;
-
   /* left:38.7%; */
   height: 7px;
   width: 200px;
@@ -61,7 +60,7 @@
   margin-top: 10px;
 }
 
-.seperator-decoration-line1 {
+.seperator-decoration-line1{
   height: 3px;
   width: 31.3%;
   color: white;
@@ -103,6 +102,7 @@
   margin: auto;
   flex-direction: row;
   margin: 0 50px;
+  height: auto;
 }
 
 /* @media (max-width: 800px) {
@@ -129,6 +129,7 @@
   margin: auto;
   /* border: 2px solid; */
   width: 28%;
+  height: 600px;
   /* border-color: aliceblue; */
   border-radius: 20px;
 }
