--- a/src/Components/Projects/Project.css
+++ b/src/Components/Projects/Project.css
@@ -141,6 +141,11 @@
   /* border-color: aliceblue; */
   border-radius: 20px;
 }
+.individual-project-container:hover{
+  background-color: #121623;
+  box-shadow: 0px 0px 10px 0px #3869a0;
+}
+
 
 .project-decoration-line {
   height: 2px;
