--- a/src/Components/Teacher/Teacher.css
+++ b/src/Components/Teacher/Teacher.css
@@ -73,7 +73,9 @@
 
 .home-teacher-image {
   height: 22rem;
-  border-radius: 20px;
+  width: 18rem;
+  border-radius: 10px;
+  object-fit: cover;
   /* padding-left: 15rem; */
 }
 
