--- a/src/Components/Home Projects/Project-home.css
+++ b/src/Components/Home Projects/Project-home.css
@@ -129,7 +129,7 @@
   margin: auto;
   /* border: 2px solid; */
   width: 28%;
-  height: 600px;
+  /* height: 600px; */
   /* border-color: aliceblue; */
   border-radius: 20px;
 }
